[tool.poetry]
name = "clustermil"
version = "0.2.0"
description = "clustermil - clustering based multiple instance learning"
authors = ["Inoue Akimitsu <inoue.akimitsu@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/inoueakimitsu/clustermil"
keywords=["machine learning", "multiple instance learning", "scikit-learn"]
classifiers = [
        'Development Status :: 4 - Beta',
        'Intended Audience :: Developers']

[tool.poetry.dependencies]
python = "^3.8,<4.0"
numpy = "^1.23.1"
pandas = "^1.4.3"
scikit-learn = "^1.1.1"
PuLP = "^2.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-watch = "^4.2.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
